--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.553.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
